<resources>
    <string name="app_name">ukc-book-exchange</string>
    <string name="title_activity_account_setup">Account_setup</string>
    <string name="Name">First name</string>
    <string name="Surname">Surname</string>
    <string name="Email">E-mail</string>
    <string name="Course">Course</string>
    <string name="SaveDetails">Save Details</string>
    <string name="Sign"> Already Registered? Sign in here.. </string>
    <string name="Details"> Add details</string>
    <string name="facebook_app_id">1616406628418420</string>
    <string name="fb_login_protocol_scheme">fb1616406628418420</string>
    <string name="title_activity_facebook_login">Sign in</string>

    <!-- Strings related to sell book -->
    <string name="BookTitle"> Book Title </string>
    <string name="Author"> Author </string>
    <string name="Edition"> Edition </string>
    <string name="Module"> Module Code </string>
    <string name="Scan"> Scan Book </string>
    <string name="Subject"> Subject </string>
    <string name="Subject2"> Enter Subject </string>
    <string name="ModuleCode"> Enter Module Code</string>
    <string name="Submit"> Submit </string>
    <string name="Default"> No books in account </string>
    <string name="Username"> Username </string>
    <string name="YourAccount"> Your Account </string>
    <string name="AccountSummary"> Account Summary </string>
    <string name="SoldBooks"> Sold books:</string>
    <string name="BookDetails"> Book Details</string>

    <!-- Dropdown list modules -->
    <string-array name="Year">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
    </string-array>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Buttons name in userview -->
    <string name="Account">Account</string>
    <string name="SellBook">Sell Book</string>
    <string name="Search">Search</string>
    <string name="SignOut">Sign Out</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_buy_view">BuyView</string>

    <string name="bookName">Book name</string>
    <string name="authorName">Author name</string>


</resources>
