<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="kent.ukc_book_exchange.UserView">


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="376dp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="180dp"
        android:layout_height="79dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31">

        <Button
            android:id="@+id/account_view_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:onClick="accountViewButton"
            android:text="@string/Account" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="signOut"
            android:text="@string/SignOut" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="143dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291">

        <ImageButton
            android:id="@+id/sell_book_plus_button"
            android:layout_width="46dp"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:onClick="sellBookButton"
            app:srcCompat="@android:drawable/ic_input_add" />

        <Button
            android:id="@+id/sell_book_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sellBookButton"
            android:text="@string/SellBook" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/account_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="181dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="379dp"
        android:layout_height="523dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <Button
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="65dp"
            android:background="#e6e6fa"
            android:hint="Search for a book..."
            android:onClick="searchBarButton"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/Chat"
            android:layout_width="280dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="InApp_button"
            android:text="Click here to chat with seller"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.119" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>